# 3DGameEngine

./: .gitignore  build.sbt
CPP/: CMakeLists.txt
CPP/engine/shaders/: basicVertex.glsl
CPP/src/engine/core/: Engine.cpp  Engine.h  Time.cpp  Time.h
CPP/src/engine/game/: Game.cpp  Game.h
CPP/src/engine/input/: Input.cpp  Input.h
CPP/src/engine/math/: Matrix4f.cpp  Matrix4f.h  Quaternion.cpp  Quaternion.h  Vector2f.cpp  Vector2f.h  Vector3f.cpp  Vector3f.h
CPP/src/engine/mesh/: Mesh.cpp  Mesh.h  Vertex.cpp  Vertex.h
CPP/src/engine/shader/: Shader.cpp  Shader.h
CPP/src/engine/transformation/: Transformation.cpp  Transformation.h
CPP/src/engine/util/: Quaternion.h  RenderUtil.cpp  RenderUtil.h  ResourceLoader.cpp  ResourceLoader.h  Time.cpp  Time.h  Util.cpp  Util.h  Vector2f.cpp  Vector2f.h  Vector3f.cpp  Vector3f.h
CPP/src/engine/window/: Window.cpp  Window.h
CPP/src/test/: Test.cpp
JAVA/: .gitignore  build.sbt
JAVA/src/main/resources/engine/shaders/: basicFragment.glsl  basicVertex.glsl
JAVA/src/main/scala/engine/core/: Engine.scala  NativesLoader.scala  Time.scala
JAVA/src/main/scala/engine/game/: Game.scala
JAVA/src/main/scala/engine/input/: Input.scala
JAVA/src/main/scala/engine/math/: Matrix4f.scala  Quaternion.scala  Vector2f.scala  Vector3f.scala
JAVA/src/main/scala/engine/mesh/: Mesh.scala  Vertex.scala
JAVA/src/main/scala/engine/shader/: ResourceLoader.scala  Shader.scala
JAVA/src/main/scala/engine/transformation/: Transformation.scala
JAVA/src/main/scala/engine/util/: RenderUtil.scala  ResourceLoader.scala  Util.scala
JAVA/src/main/scala/engine/window/: Window.scala
JAVA/src/main/scala/test/: Main.scala
src/main/scala/engine/core/: Engine.scala  NativesLoader.scala  Time.scala
src/main/scala/engine/game/: Game.scala
src/main/scala/engine/input/: Input.scala  KeyHandler.scala  KeyInput.scala
src/main/scala/engine/window/: Window.scala
src/main/scala/test/: Main.scala
